norm minimization clean-up

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -6403,8 +6403,9 @@
   year         = {1965},
   booktitle    = {Studies in Real and Complex Analysis},
   editor       = {I. I. Hirschmann, Jr.},
-  series       = {Studies in mathematics (Mathematical Association of America)},
+  series       = {MAA Studies in Mathematics},
   volume       = {3},
+  pages        = {179--209},
   publisher    = {Mathematical Association of America; distributed by Prentice-Hall},
   isbn10       = {0883851032},
   isbn         = {9780883851036},
