--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -342,7 +342,7 @@
   author       = {Richard E. Cobb},
   title        = {Confidence Bands, Measurement Noise, and Multiple Input - Multiple Output Measurements Using the Three-Channel Frequency Response Function Estimator},
   year         = {1988},
-  institute    = {Virginia Polytechnic Institute and State University},
+  school       = {Virginia Polytechnic Institute and State University},
   month        = {May},
   type         = {Ph.D. Dissertation},
   note         = {``Dissertation submitted to the Faculty of the Virginia Polytechnic Institute and State University in partial fulullment of the requirements for the degree of Doctor of Philosophy in Mechanical Engineering"},
@@ -536,6 +536,27 @@
   pages        = {610},
   url          = {http://books.google.com/books?vid=ISBN0023535717},
   urla         = {http://www.amazon.com/dp/0023535717},
+  }
+
+@book{jazwinski1970,
+  title        = {Stochastic Processes and Filtering Theory},
+  publisher    = {Dover Books on Electrical Engineering},
+  year         = {1970},
+  author       = {Andrew H. Jazwinski},
+  series       = {Academic Press},
+  pages        = {376},
+  }
+
+@book{jazwinski2007,
+  isbn         = {9780486318196},
+  isbn10       = {0486318192},
+  title        = {Stochastic Processes and Filtering Theory},
+  publisher    = {Dover},
+  year         = {2007},
+  author       = {Andrew H. Jazwinski},
+  edition      = {``This Dover edition, first published in 2007, is an unabridged republication of the work originally published by Academic Press, Inc., New York, in 1970."},
+  series       = {Dover Books on Electrical Engineering Series},
+  pages        = {376},
   }
 
 @book{jenkins1968,
