--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1358,6 +1358,8 @@
 \newcommand{\vpsi}   [0]{\mbfpsi}
 \newcommand{\vphi}   [0]{\mbfphi}
 \newcommand{\vtheta} [0]{\mbftheta}
+\newcommand{\vthetao}[0]{\vtheta_{\mathsfup{opt}}}
+\newcommand{\vthetae}[0]{\hat{\vtheta}}
 \newcommand{\vomega} [0]{\mbfomega}
 \newcommand{\vA  }   [0]{\mbfA}
 \newcommand{\vB  }   [0]{\mbfB}
